--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # Edit next line, providing your own name.
 title: Molly Maluhia | Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
-url: "https://akintunde.github.io"
+url: "https://akintunde102.github.io"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
 baseurl: "/template"
 
