--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@
 
 # REQUIRED CHANGES
 # Edit next line, providing your own name.
-title: Molly Maluhia | Professional Portfolio
-# Edit next line, replacing 'techfolios' with your github username
+title: Akintunde Jegede | Professional Portfolio
 url: "https://akintunde102.github.io"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
 baseurl: "/template"
